argo-cd/argocd-vs-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: argocd-gw
  namespace: argocd
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "argocd.pinlab.fun"  #url host
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-vs
  namespace: argocd
spec:
  hosts:
  - "*"
  gateways:
  - argocd-gw
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: argocd-server.argocd.svc.cluster.local  #host  pod_name.namespace.svc.cluster.local

---
# apiVersion: networking.istio.io/v1alpha3
# kind: DestinationRule
# metadata:
#   name: argocd-server-dtrl
#   namespace: argocd
# spec:
#   host: argocd-server.argocd.svc.cluster.local
#   trafficPolicy:
#     tls:
#       mode: DISABLE
# ---
